@@ -55,8 +55,8 @@ my @log_neg = (qw/
 
 plan tests => 1+2+2+3  # logreal
             + 7        # expreal
-            + 7        # powreal
-            + 6        # rootreal
+            + 16       # powreal
+            + 8        # rootreal
             + 5        # agmreal
             + 4        # add,sub,mul,div
             ;
@@ -95,15 +95,24 @@ is(expreal("-394.84010945715266885",200),'.0000000000000000000000000000000000000
 like(expreal(50,1200),qr/^5184705528587072464087.453\d+013724923667450316/,"expreal(50,1200)");
 
 ######## pow
+is(powreal(0,0,20),'1.0000000000000000000',"powreal(0,0,20)");
 is(powreal(0,2.2,20),'.00000000000000000000',"powreal(0,2.2,20)");
 is(powreal(1,2.2,20),'1.0000000000000000000',"powreal(1,2.2,20)");
-is(powreal(-1,2.2,20),'-1.0000000000000000000',"powreal(-1,2.2,20)");
+is(powreal(-1,2.2,20),undef,"powreal(-1,2.2,20)");
 is(powreal(2,-5.01,60),'.031034140482407371922912819277752330350669761418765540014674',"powreal(2,-5.01,60)");
 is(powreal(2,5,2),32,"powreal(2,5,2)");
 is(powreal(2,-5,5),".03125","powreal(2,-5,5)");
 is(powreal(1234.5678, 9.87654321, 60),
    "3415709626357388739894539947448.87170455872193676278327545082",
    "powreal(1234.5678, 9.87654321, 60)");
+is(powreal(14,2.001,40),'196.5179383705273240556783615952716705074',"powreal(14,2.001,40)");
+is(powreal(-14,2.001,40),undef,"powreal(-14,2.001,40)");
+is(powreal(-4,.5,40),undef,"powreal(-4,.5,40)");
+is(powreal(-8,divreal(2,3),10),undef,"powreal(-8,divreal(2,3),10)");
+is(powreal(0,-1,40),undef,"powreal(0,-1,40)");
+is(powreal(14,1,10),'14.00000000',"powreal(14,1,10)");
+is(powreal(-14,1,10),'-14.00000000',"powreal(-14,1,10)");
+is(powreal(15,-1,10),'.0666666667',"powreal(15,-1,10)");
 
 ######## root
 is(rootreal(0,2,20),'.00000000000000000000',"rootreal(0,2,20)");
@@ -112,6 +121,8 @@ is(rootreal(2,2,20),'1.4142135623730950488',"rootreal(2,2,20)");
 is(rootreal(2,3,20),'1.2599210498948731648',"rootreal(2,3,20)");
 is(rootreal(2,2,80),'1.4142135623730950488016887242096980785696718753769480731766797379907324784621070',"rootreal(2,2,80)");
 is(rootreal(100.19,17,80),'1.3112803450586508207655195395037621220588179920316817022058520019614000795229155',"rootreal(100.19,17,80)");
+is(rootreal(-4,2,10),undef,"rootreal(-4,2,10)");
+is(rootreal(-8,divreal(2,3),10),undef,"rootreal(-8,divreal(2,3),10)");
 
 ######## agm
 is(agmreal(1,'1.4142135623730950488016887242096980785696718753769480731766797379907325',71),
